2010-07-08  Andrew John Hughes  <ahughes@redhat.com>

	* Makefile.am:
	(rebuild): Add new target to allow a quick
	rebuild of OpenJDK in the manner of the existing
	hotspot target.

2010-07-08  Omair Majid  <omajid@redhat.com>

	* plugin/icedteanp/java/sun/applet/PluginAppletViewer.java:
	(reFrame): Pass the panel to the constructor, dont set it yourself.
	(PluginAppletViewer): Set the panel to be the passed in object and only
	then add it to the list of all panels.

2010-07-08  Omair Majid  <omajid@redhat.com>

	PR icedtea/460
	* plugin/icedteanp/java/netscape/security/ForbiddenTargetException.java:
	New file. Some applets, for legacy support, expect this class to be
	present.

2010-07-08  Andrew John Hughes  <ahughes@redhat.com>

	* Makefile.am:
	(clean-extract-ecj): Don't depend on clean-patch-ecj,
	just delete the stamp.
	(clean-extract-openjdk): Likewise for clean-patch and
	clean-patch-fsg.

2010-07-06  Andrew John Hughes  <ahughes@redhat.com>

	* Makefile.am:
	(PULSE_JAVA_BUILDDIR): Use a different name from
	the source directory to avoid confusion.
	(clean-local): jni-common.o is not in the top-level
	directory.
	(icedtea): Locate pulse-java.jar in build directory
	not top-level directory.
	(icedtea-debug): Likewise.
	(pulse-java-jar): Likewise.
	(clean-pulse-java): Likewise.  Given clean-pulse-java
	only exists when PULSE_JAVA_NATIVE_BUILDDIR and
	PULSE_JAVA_CLASS_DIR are set, there is no need to test
	them.

2010-07-05  Andrew John Hughes  <ahughes@redhat.com>

	Revert rt.jar only for ecj tree.  Don't do
	so (or build rt-class-files) for builds with
	OpenJDK.  Make variable naming clearer.
	* Makefile.am:
	(BOOT_DIR): Renamed from ICEDTEA_BOOT_DIR.
	(RUNTIME): Renamed from ICEDTEA_RT.
	(ENDORSED_DIR): Renamed from ICEDTEA_ENDORSED_DIR.
	(ECJ_BOOT_DIR): Shortcut for bootstrap/ecj.
	(ICEDTEA_BOOT_DIR): Shortcut for bootstrap/icedtea.
	(rt-class-files): Only build replacement runtime classes
	when LACKS_SUN_AWT_TOOLKIT is set.